--- a/stylesheets/font.css
+++ b/stylesheets/font.css
@@ -6,14 +6,14 @@
 }
 
 @font-face {
-  font-family: "NWT Bodoni-bold";
+  font-family: "NWT Bodoni";
   src: url("../my_font/NWTBodoni-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "NWT Bodoni-italic";
+  font-family: "NWT Bodoni";
   src: url("../my_font/NWTBodoni-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
